# CleanAPI

./: .coveragerc  .editorconfig  .isort.cfg  LICENSE  LICENSE.txt  Makefile  README.md  mypy.ini  setup.cfg  setup.py
.github/workflows/: ci.yml
requirements/: dev.in  dev.txt  prod.in  prod.txt
src/clean_api/web_app/: main.py
tests/: test_skeleton.py
